--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,7 @@
               "src/api"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/custom-theme.scss",
               "src/styles.css"
             ],
