--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@angular/compiler": "~9.1.1",
     "@angular/core": "~9.1.1",
     "@angular/forms": "~9.1.1",
+    "@angular/localize": "~9.1.1",
     "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
+    "@ng-bootstrap/ng-bootstrap": "^6.2.0",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.5.2",
     "font-awesome": "^4.7.0",
